add origin vignette

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -10,3 +10,13 @@
     padding: 1rem;
   }
 }
+
+.AboutText {
+  text-align:center;
+}
+
+.gallery-wrapper {
+  max-width: 1280px;
+  margin: 0 auto; 
+  padding: 2rem;
+}
