--- a/src/components/Vignette/Vignette.css
+++ b/src/components/Vignette/Vignette.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: "Indie Flower", cursive;
+  font-family: "Butterfly Kids", cursive;
   font-weight: 400;
   font-style: normal;
 }
