--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -16,3 +16,9 @@
   margin: 0 auto; 
   padding: 2rem;
 }
+
+.gallery-wrapper h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
