--- a/src/components/Vignette/Vignette.css
+++ b/src/components/Vignette/Vignette.css
@@ -19,7 +19,8 @@ h1 {
 .vignette-container h1 {
   display: flex;
   flex-direction: column;
-  align-items: center;      
+  align-items: center;   
+  margin-top: 65px;   
 }
 
 .vignette-container {
@@ -95,6 +96,11 @@ h1 {
   font-size: 0.9rem;
   opacity: 0.8;
 }
+
+#comment-section {
+  width: 100%;
+}
+
 
 @media (max-width: 768px) {
   .zoom-replace-wrapper {
