--- a/src/components/Vignette/Vignette.css
+++ b/src/components/Vignette/Vignette.css
@@ -53,7 +53,7 @@ h1 {
   position: relative;
   width: 100%;  
   max-width: 700px;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 1 / 1.3;
   margin-bottom: 32px;
 }
 
@@ -101,7 +101,6 @@ h1 {
   width: 100%;
 }
 
-
 @media (max-width: 768px) {
   .zoom-replace-wrapper {
     width: 100%;
@@ -115,8 +114,11 @@ h1 {
   .vignette-img {
     opacity: 1 !important;
   }
+  .vignette-images
+  {
+    flex-wrap: wrap;
+  }
 }
-
 
 
 
